[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/blueprints/props/tables/blueprint_table_2pax.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/controls/blueprint_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/blueprints/stalls/blueprint_stall.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/blueprints/blueprint_eraser.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/blueprint_inventory.gd" type="Script" id=5]
[ext_resource path="res://src/blueprints/props/tables/blueprint_table_4pax.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/blueprints/props/tables/blueprint_table_8pax.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/blueprints/props/tray_stations/blueprint_tray_station_large.tscn" type="PackedScene" id=8]

[node name="BlueprintInventory" type="MarginContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_bottom = -10.0
grow_vertical = 0
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 702.0
margin_bottom = 100.0

[node name="Control" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 78.0
margin_bottom = 100.0
rect_min_size = Vector2( 70, 100 )

[node name="ToggleButton_CheckForClearance" type="Button" parent="HBoxContainer/Control"]
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
size_flags_vertical = 3
toggle_mode = true
enabled_focus_mode = 0
text = "Clearance"

[node name="ToggleButton_ExpansionMode" type="Button" parent="HBoxContainer/Control"]
margin_top = 34.0
margin_right = 78.0
margin_bottom = 65.0
focus_mode = 0
size_flags_vertical = 3
toggle_mode = true
enabled_focus_mode = 0
text = "Expansion"

[node name="Button_HideShow" type="Button" parent="HBoxContainer/Control"]
margin_top = 69.0
margin_right = 78.0
margin_bottom = 100.0
focus_mode = 0
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Blueprints"

[node name="HBoxContainer_Collapsable" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 82.0
margin_right = 702.0
margin_bottom = 100.0

[node name="BlueprintPanel_Stall" parent="HBoxContainer/HBoxContainer_Collapsable" instance=ExtResource( 2 )]
grow_vertical = 0
blueprint_scene = ExtResource( 3 )
blueprint_name = "Stall"

[node name="BlueprintPanel_Table2Pax" parent="HBoxContainer/HBoxContainer_Collapsable" instance=ExtResource( 2 )]
margin_left = 104.0
margin_right = 204.0
grow_vertical = 0
blueprint_scene = ExtResource( 1 )
blueprint_name = "Table 2 Pax"

[node name="BlueprintPanel_Table4Pax" parent="HBoxContainer/HBoxContainer_Collapsable" instance=ExtResource( 2 )]
margin_left = 208.0
margin_right = 308.0
grow_vertical = 0
blueprint_scene = ExtResource( 6 )
blueprint_name = "Table 4 Pax"

[node name="BlueprintPanel_Table8Pax" parent="HBoxContainer/HBoxContainer_Collapsable" instance=ExtResource( 2 )]
margin_left = 312.0
margin_right = 412.0
grow_vertical = 0
blueprint_scene = ExtResource( 7 )
blueprint_name = "Table 8 Pax"

[node name="BlueprintPanel_TrayStationLarge" parent="HBoxContainer/HBoxContainer_Collapsable" instance=ExtResource( 2 )]
margin_left = 416.0
margin_right = 516.0
grow_vertical = 0
blueprint_scene = ExtResource( 8 )
blueprint_name = "Tray Station"

[node name="BlueprintPanel_Eraser" parent="HBoxContainer/HBoxContainer_Collapsable" instance=ExtResource( 2 )]
margin_left = 520.0
margin_right = 620.0
grow_vertical = 0
blueprint_scene = ExtResource( 4 )
blueprint_name = "Eraser"

[connection signal="toggled" from="HBoxContainer/Control/ToggleButton_CheckForClearance" to="." method="_on_CheckBox_EnableCheckForClearance_toggled"]
[connection signal="toggled" from="HBoxContainer/Control/ToggleButton_ExpansionMode" to="." method="_on_Button_ExpansionMode_toggled"]
[connection signal="pressed" from="HBoxContainer/Control/Button_HideShow" to="." method="_on_Button_pressed"]
